--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,7 @@
 namePrefix: kustomize-
 
 resources:
-- guestbook-ui-deployment.yaml
-- guestbook-ui-svc.yaml
-apiVersion: kustomize.config.k8s.io/v1beta1
+- helloworld-deployment.yaml
+- helloworld-svc.yaml
+apiVersion: api/v1beta1
 kind: Kustomization
