--- a/helloworld-deployment.yaml
+++ b/helloworld-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: helloworld
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
+      - image: registry-1.docker.io/maf888/gitops-test:1.0
         name: helloworld
         ports:
         - containerPort: 80
