--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,5 +3,5 @@ namePrefix: kustomize-
 resources:
 - helloworld-deployment.yaml
 - helloworld-svc.yaml
-apiVersion: api/v1beta1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
