--- a/helloworld-deployment.yaml
+++ b/helloworld-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: helloworld
     spec:
       containers:
-      - image: registry-1.docker.io/maf888/gitops-hello-world
+      - image: registry-1.docker.io/maf888/gitops-hello-world:1.0
         name: helloworld
         ports:
         - containerPort: 80
