--- a/infra/helloworld-deployment.yaml
+++ b/infra/helloworld-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: helloworld
     spec:
       containers:
-      - image: registry-1.docker.io/helloworld:0.1
+      - image: registry-1.docker.io/maf888/helloworld:0.1
         name: helloworld
         ports:
         - containerPort: 80
